--- a/indexP3.html
+++ b/indexP3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Ohmyfood </title>
-    <link rel="stylesheet" href="Documents/style.css" type="text/css">
+    <link rel="stylesheet" href="css/style.css" type="text/css">
     <meta name="description" content="Découvrez des menus qui vous conviennent dans des restaurants d'exception">
     <meta name="keywords" content="gastronomie, menu, restaurant, gastronomique, exception">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -16,8 +16,8 @@
 
 <body>
 <!-- Loader -->
-<div>
-    <div >
+<div class="loader">
+    <div class="loader__food">
         <span>o</span>
         <span>h</span>
         <span>m</span>
@@ -27,20 +27,20 @@
         <span>o</span>
         <span>d</span>
     </div>
-    <div >
-        <span><i ></i></span>
+    <div class="loader__fork">
+        <span><i class="fas fa-utensils"></i></span>
     </div>
 </div>
 
 <!-- Header -->
-<header >
-    <h1><a>Ohmyfood</a></h1>
+<header class="main__header">
+    <h1><a href="index.html">Ohmyfood</a></h1>
 </header>
 
 
-<main >
+<main class="main">
     <!-- Section Maps -->
-    <div >
+    <div class="maps">
     <span>
         <i class="fas fa-map-marker-alt"></i>
     </span>
@@ -50,55 +50,55 @@
     </div>
 
     <!-- Section A propos -->
-    <div >
+    <div class="about">
         <h2> Réservez le menu qui vous convient </h2>
         <p> Découvrez des restaurants d'exception, sélectionnés par nos soins </p>
-        <span >
+        <span class="btn__about">
         <button> Explorer nos restaurants </button>
     </span>
     </div>
 
     <!-- Section Fonctionnement -->
-    <section >
+    <section class="operation">
         <h2>Fonctionnement</h2>
-        <ul >
+        <ul class="operation__steps">
             <li>
-                <div >1</div>
-                <div><i ></i></div>
+                <div class="operation__steps--number">1</div>
+                <div><i class="fas fa-mobile-alt operation__steps--icon"></i></div>
                 <p>Choisissez un restaurant</p>
             </li>
             <li>
-                <div >2</div>
-                <div><i ></i></div>
+                <div class="operation__steps--number">2</div>
+                <div><i class="fas fa-list-ul operation__steps--icon"></i></div>
                 <p>Composez votre menu</p>
             </li>
             <li>
-                <div>3</div>
-                <div><i ></i></div>
+                <div class="operation__steps--number">3</div>
+                <div><i class="fas fa-store operation__steps--icon"></i></div>
                 <p>Dégustez au restaurant</p>
             </li>
         </ul>
     </section>
 
     <!-- Section Restaurants -->
-    <section >
-        <div >
-            <div >
+    <section class="restaurant">
+        <div class="main__restaurant">
+            <div class="restaurant__title">
                 <h3>Restaurants</h3>
             </div>
-            <div >
-                <div >
-                    <span > Nouveau </span>
+            <div class="card">
+                <div class="btn__card">
+                    <span class="new"> Nouveau </span>
                 </div>
 
                 <a href="pages/lapalette-dugout.html">
                     <figure>
-                        <img src="Documents/Maquettes Ohmyfood/images/restaurants/menu-palette-gout.jpg" alt="restaurant la palette du gout">
+                        <img src="images/menu-palette-gout.jpg" alt="restaurant la palette du gout">
                         <figcaption>
-                            <div >
+                            <div class="heart">
                                 <h4>La palette du goût</h4>
-                                <div >
-                                    <span><i></i></span>
+                                <div class="fill__heart">
+                                    <span><i class="fill far fa-heart fa-2x"></i></span>
                                 </div>
                             </div>
                             <p>Ménilmontant</p>
@@ -106,19 +106,19 @@
                     </figure>
                 </a>
             </div>
-            <div >
-                <div >
-                    <span> Nouveau </span>
+            <div class="card">
+                <div class="btn__card">
+                    <span class="new"> Nouveau </span>
                 </div>
 
                 <a href="pages/la-noteenchantée.html">
                     <figure>
-                        <img src="Documents/Maquettes Ohmyfood/images/restaurants/menu-note-enchantee.jpg" alt="restaurant la note enchantee">
+                        <img src="images/menu-note-enchantee.jpg" alt="restaurant la note enchantee">
                         <figcaption>
-                            <div >
+                            <div class="heart">
                                 <h4>La note enchantée</h4>
-                                <div >
-                                    <span><i ></i></span>
+                                <div class="fill__heart">
+                                    <span><i class="fill far fa-heart fa-2x"></i></span>
                                 </div>
                             </div>
                             <p>Charonne</p>
@@ -126,19 +126,19 @@
                     </figure>
                 </a>
             </div>
-            <div >
-                <div >
-                    <span > Nouveau </span>
+            <div class="card">
+                <div class="btn__card">
+                    <span class="new"> Nouveau </span>
                 </div>
 
                 <a href="pages/à-lafrancaise.html">
                     <figure>
-                        <img src="Documents/Maquettes Ohmyfood/images/restaurants/menu-francaise.jpg" alt="restaurant a la francaise">
+                        <img src="images/menu-francaise.jpg" alt="restaurant a la francaise">
                         <figcaption>
-                            <div >
+                            <div class="heart">
                                 <h4>A la française</h4>
-                                <div >
-                                    <span><i ></i></span>
+                                <div class="fill__heart">
+                                    <span><i class="fill far fa-heart fa-2x"></i></span>
                                 </div>
                             </div>
                             <p>Cité Rouge</p>
@@ -146,19 +146,19 @@
                     </figure>
                 </a>
             </div>
-            <div >
-                <div >
-                    <span > Nouveau </span>
+            <div class="card">
+                <div class="btn__card">
+                    <span class="new"> Nouveau </span>
                 </div>
 
                 <a href="pages/delice-dessens.html">
                     <figure>
-                        <img src="Documents/Maquettes Ohmyfood/images/restaurants/menu-delice-sens.jpg" alt="Restaurant Le délice des sens">
+                        <img src="images/menu-delice-sens.jpg" alt="Restaurant Le délice des sens">
                         <figcaption>
-                            <div >
+                            <div class="heart">
                                 <h4>Le délice des sens</h4>
-                                <div>
-                                    <span><i ></i></span>
+                                <div class="fill__heart">
+                                    <span><i class="fill far fa-heart fa-2x"></i></span>
                                 </div>
                             </div>
                             <p>Folie-Méricourt</p>
@@ -183,5 +183,3 @@
 
 </body>
 </html>
-
-
