--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Ohmyfood </title>
-    <link rel="stylesheet" href="css/style.css" type="text/css">
+    <link rel="stylesheet" href="css/style.css">
     <meta name="description" content="Découvrez des menus qui vous conviennent dans des restaurants d'exception">
     <meta name="keywords" content="gastronomie, menu, restaurant, gastronomique, exception">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -15,7 +15,23 @@
 </head>
 
 <body>
-    
+<!-- Loader -->
+<div class="loader">
+    <div class="loader__food">
+        <span>o</span>
+        <span>h</span>
+        <span>m</span>
+        <span>y</span>
+        <span>f</span>
+        <span>o</span>
+        <span>o</span>
+        <span>d</span>
+    </div>
+    <div class="loader__fork">
+        <span><i class="fas fa-utensils"></i></span>
+    </div>
+</div>
+
 <!-- Header -->
 <header class="main__header">
     <h1><a href="index.html">Ohmyfood</a></h1>
@@ -77,7 +93,7 @@
 
                 <a href="pages/lapalette-dugout.html">
                     <figure>
-                        <img src="images/menu-palette-gout.jpg" alt="restaurant la palette du gout">
+                        <img src="public/images/restaurants/menu-palette-gout.jpg" alt="restaurant la palette du gout">
                         <figcaption>
                             <div class="heart">
                                 <h4>La palette du goût</h4>
@@ -97,7 +113,7 @@
 
                 <a href="pages/la-noteenchantée.html">
                     <figure>
-                        <img src="images/menu-note-enchantee.jpg" alt="restaurant la note enchantee">
+                        <img src="public/images/restaurants/menu-note-enchantee.jpg" alt="restaurant la note enchantee">
                         <figcaption>
                             <div class="heart">
                                 <h4>La note enchantée</h4>
@@ -117,7 +133,7 @@
 
                 <a href="pages/à-lafrancaise.html">
                     <figure>
-                        <img src="images/menu-francaise.jpg" alt="restaurant a la francaise">
+                        <img src="public/images/restaurants/menu-francaise.jpg" alt="restaurant a la francaise">
                         <figcaption>
                             <div class="heart">
                                 <h4>A la française</h4>
@@ -137,7 +153,7 @@
 
                 <a href="pages/delice-dessens.html">
                     <figure>
-                        <img src="images/menu-delice-sens.jpg" alt="Restaurant Le délice des sens">
+                        <img src="public/images/restaurants/menu-delice-sens.jpg" alt="Restaurant Le délice des sens">
                         <figcaption>
                             <div class="heart">
                                 <h4>Le délice des sens</h4>
@@ -165,5 +181,4 @@
     </ul>
 </footer>
 
-</body>
-</html>
+
