--- a/à-lafrancaise.html
+++ b/à-lafrancaise.html
@@ -13,6 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
 </head>
+
 <body>
 
 <!-- Header -->
@@ -24,27 +25,27 @@
 <!-- Main -->
 <main class="main">
     <div class="header__img">
-        <img src="images/menu-delice-sens.jpg" alt="menu delice des sens" title="ohmyfood menu delice des sens">
+        <img src="../public/images/restaurants/menu-francaise.jpg" alt="menu a la francaise" title="ohmyfood menu a la francaise">
     </div>
     <div class="main__menu">
         <div class="menu__title">
-            <h2>Le délice des sens</h2>
+            <h2>À la française</h2>
             <div class="fill__heart">
                 <span><i class="fill far fa-heart fa-2x"></i></span>
             </div>
         </div>
-
         <div class="full__menu">
-            <!--Entrées -->
             <div class="starter">
                 <div class="starter__title">
                     <h3>Entrées</h3>
                     <div class="line"></div>
                 </div>
+
+                <!-- Entrées-->
                 <div class="meals">
-                    <h4>Tartare de thon</h4>
+                    <h4>Tartare de poulpe acidulé</h4>
                     <div class="last__line">
-                        <p>Assaisonné au yuzu</p>
+                        <p>Aux zestes d'orange</p>
                         <span><strong>25€</strong></span>
                     </div>
                     <div class="cross">
@@ -52,9 +53,9 @@
                     </div>
                 </div>
                 <div class="meals">
-                    <h4>Bouchée de homard croustillant </h4>
+                    <h4>Velouté de légumes d'antan</h4>
                     <div class="last__line">
-                        <p>Et sa farandole de petits légumes</p>
+                        <p>Carotte, panais, topinambour</p>
                         <span><strong>35€</strong></span>
                     </div>
                     <div class="cross">
@@ -62,9 +63,9 @@
                     </div>
                 </div>
                 <div class="meals">
-                    <h4>Velouté de cèpes</h4>
+                    <h4>Soupe à l'oignon</h4>
                     <div class="last__line">
-                        <p>Aux truffes</p>
+                        <p>Revisitée</p>
                         <span><strong>20€</strong></span>
                     </div>
                     <div class="cross">
@@ -80,9 +81,9 @@
                     <div class="line"></div>
                 </div>
                 <div class="meals">
-                    <h4>Poulet rôti aux herbes de Provence</h4>
+                    <h4>Coquilles Saint-Jacques</h4>
                     <div class="last__line">
-                        <p>Et sa crème de truffe</p>
+                        <p>Accompagnées d'une purée de panais</p>
                         <span><strong>40€</strong></span>
                     </div>
                     <div class="cross">
@@ -90,9 +91,9 @@
                     </div>
                 </div>
                 <div class="meals">
-                    <h4>Langouste rôtie</h4>
+                    <h4>Magret de canard</h4>
                     <div class="last__line">
-                        <p>Et ses légumes de saison</p>
+                        <p>Et parmentier de pommes de terre</p>
                         <span><strong>35€</strong></span>
                     </div>
                     <div class="cross">
@@ -100,9 +101,9 @@
                     </div>
                 </div>
                 <div class="meals">
-                    <h4>Côte de boeuf Angus</h4>
+                    <h4>Pigeonneau d’Ille-et-Vilaine</h4>
                     <div class="last__line">
-                        <p>Et sa purée de panais</p>
+                        <p>Sur son lit de gnocchis aux légumes</p>
                         <span><strong>44€</strong></span>
                     </div>
                     <div class="cross">
@@ -118,9 +119,9 @@
                     <div class="line"></div>
                 </div>
                 <div class="meals">
-                    <h4>Farandole de desserts</h4>
+                    <h4>Pétales de violettes glacés</h4>
                     <div class="last__line">
-                        <p>Du chef</p>
+                        <p>Et purée de noisettes</p>
                         <span><strong>18€</strong></span>
                     </div>
                     <div class="cross">
@@ -128,9 +129,9 @@
                     </div>
                 </div>
                 <div class="meals">
-                    <h4>Crème brulée</h4>
+                    <h4>Fondant au chocolat</h4>
                     <div class="last__line">
-                        <p>Revisitée</p>
+                        <p>Revisité</p>
                         <span><strong>22€</strong></span>
                     </div>
                     <div class="cross">
@@ -138,9 +139,9 @@
                     </div>
                 </div>
                 <div class="meals">
-                    <h4>Tiramisu</h4>
+                    <h4>Millefeuille croustillant</h4>
                     <div class="last__line">
-                        <p>À la noisette</p>
+                        <p>Myrtilles et pâte d’amande</p>
                         <span><strong>23€</strong></span>
                     </div>
                     <div class="cross">
@@ -151,9 +152,10 @@
         </div>
     </div>
     <div>
-    <span class="btn__order">
-        <button> Commander </button>
-    </span>
+
+        <span class="btn__order">
+            <button> Commander </button>
+        </span>
     </div>
 </main>
 
@@ -167,6 +169,5 @@
         <li><a href="mailto:ohmyfood-contact@gmail.com">Contact</a></li>
     </ul>
 </footer>
-
 </body>
 </html>
