--- a/delice-dessens.html
+++ b/delice-dessens.html
@@ -24,7 +24,7 @@
 <!-- Main -->
 <main class="main">
     <div class="header__img">
-        <img src="../public/images/restaurants/menu-delice-sens.jpg" alt="menu delice des sens" title="ohmyfood menu delice des sens">
+        <img src="images/menu-delice-sens.jpg" alt="menu delice des sens" title="ohmyfood menu delice des sens">
     </div>
     <div class="main__menu">
         <div class="menu__title">
