--- a/à-lafrancaise.html
+++ b/à-lafrancaise.html
@@ -25,7 +25,7 @@
 <!-- Main -->
 <main class="main">
     <div class="header__img">
-        <img src="../public/images/restaurants/menu-francaise.jpg" alt="menu a la francaise" title="ohmyfood menu a la francaise">
+        <img src="images/menu-francaise.jpg" alt="menu a la francaise" title="ohmyfood menu a la francaise">
     </div>
     <div class="main__menu">
         <div class="menu__title">
