--- a/pages/lapalette-dugout.html
+++ b/pages/lapalette-dugout.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Ohmyfood </title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../public/css/style.css">
     <meta name="description" content="Découvrez des menus qui vous conviennent dans des restaurants d'exception">
     <meta name="keywords" content="gastronomie, menu, restaurant, gastronomique, exception">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -15,34 +15,37 @@
 </head>
 
 <body>
-<!-- Header  -->
+<!-- Header -->
 <header class="menu__header">
     <div class="arrow"><a href="../index.html"><i class="fas fa-arrow-left"></i></a></div>
     <h1><a href="../index.html">ohmyfood</a></h1>
 </header>
 
-<!-- Main  -->
-<main class="main">
+<!-- Main -->
+<main class="menu__main">
     <div class="header__img">
-        <img src="images/menu-note-enchantee.jpg" alt="menu note enchantée" title="ohmyfood menu note enchantee">
+        <img src="../public/images/restaurants/menu-palette-gout.jpg" alt="menu palette du gout" title="ohmyfood menu palette du gout">
     </div>
     <div class="main__menu">
         <div class="menu__title">
-            <h2>La note enchantée</h2>
+            <h2>La palette du goût</h2>
             <div class="fill__heart">
                 <span><i class="fill far fa-heart fa-2x"></i></span>
             </div>
         </div>
+
         <div class="full__menu">
+
+            <!-- Entrées -->
             <div class="starter">
                 <div class="starter__title">
                     <h3>Entrées</h3>
                     <div class="line"></div>
                 </div>
                 <div class="meals">
-                    <h4>Ravioles de foie gras</h4>
+                    <h4>Fricassée d'escargot</h4>
                     <div class="last__line">
-                        <p>Accompagnés de leur crème à la truffe</p>
+                        <p>Au piment d'Espelette</p>
                         <span><strong>25€</strong></span>
                     </div>
                     <div class="cross">
@@ -50,9 +53,9 @@
                     </div>
                 </div>
                 <div class="meals">
-                    <h4>Caviar osciètre</h4>
+                    <h4>Foie gras de canard mi-cuit</h4>
                     <div class="last__line">
-                        <p>Sur blini à la farine de blé noir</p>
+                        <p>Et ses copeaux de truffe noire</p>
                         <span><strong>35€</strong></span>
                     </div>
                     <div class="cross">
@@ -60,35 +63,27 @@
                     </div>
                 </div>
                 <div class="meals">
-                    <h4>Homard et espuma de potiron</h4>
+                    <h4>Oeuf au plat</h4>
                     <div class="last__line">
-                        <p>Mariné aux zestes d'orange</p>
+                        <p>Assaisonné à la truffe sur lit de caviar</p>
                         <span><strong>20€</strong></span>
                     </div>
                     <div class="cross">
                         <span><i class="fas fa-check-circle fa-2x"></i></span>
                     </div>
                 </div>
-                <div class="meals">
-                    <h4>Foie gras de canard cuit entier</h4>
-                    <div class="last__line">
-                        <p>Confiture de figue et pain toasté</p>
-                        <span><strong>35€</strong></span>
-                    </div>
-                    <div class="cross">
-                        <span><i class="fas fa-check-circle fa-2x"></i></span>
-                    </div>
-                </div>
             </div>
+
+            <!-- Plats principaux -->
             <div class="dish">
                 <div class="dish__title">
                     <h3>Plats</h3>
                     <div class="line"></div>
                 </div>
                 <div class="meals">
-                    <h4>Noix de coquilles Saint-Jacques</h4>
+                    <h4>Filet de boeuf aux herbes</h4>
                     <div class="last__line">
-                        <p>Sur lit de purée de céleri-rave</p>
+                        <p>Accompagné de sa ribambelle de légumes</p>
                         <span><strong>40€</strong></span>
                     </div>
                     <div class="cross">
@@ -96,9 +91,9 @@
                     </div>
                 </div>
                 <div class="meals">
-                    <h4>Langoustine poêlée</h4>
+                    <h4>Parmentier de queue de boeuf</h4>
                     <div class="last__line">
-                        <p>Purée de patate douce</p>
+                        <p>À la truffe noire sur sa purée de panais</p>
                         <span><strong>35€</strong></span>
                     </div>
                     <div class="cross">
@@ -106,9 +101,9 @@
                     </div>
                 </div>
                 <div class="meals">
-                    <h4>Mijoté de queue de boeuf</h4>
+                    <h4>Filet de turbot</h4>
                     <div class="last__line">
-                        <p>Et riz sauvage aux zestes de citron</p>
+                        <p>Aux agrumes</p>
                         <span><strong>44€</strong></span>
                     </div>
                     <div class="cross">
@@ -116,27 +111,27 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Desserts -->
             <div class="dessert">
                 <div class="dessert__title">
                     <h3>Desserts</h3>
                     <div class="line"></div>
                 </div>
                 <div class="meals">
-                    <h4>Macaron noisette et chocolat</h4>
+                    <h4>Paris-Brest</h4>
                     <div class="last__line">
-                        <p>Glace au caramel brun et sel de Guérande</p>
-                        <span>
-                        <strong>18€</strong>
-                        </span>
+                        <p>Revisité</p>
+                        <span><strong>18€</strong></span>
                     </div>
                     <div class="cross">
                         <span><i class="fas fa-check-circle fa-2x"></i></span>
                     </div>
                 </div>
                 <div class="meals">
-                    <h4>Baba au rhum revisité</h4>
+                    <h4>Macaron au chocolat d'exception </h4>
                     <div class="last__line">
-                        <p>Avec son coulis de citron</p>
+                        <p>Et glace à la vanille de Madagascar</p>
                         <span><strong>22€</strong></span>
                     </div>
                     <div class="cross">
@@ -144,9 +139,9 @@
                     </div>
                 </div>
                 <div class="meals">
-                    <h4>Tarte au citron meringuée</h4>
+                    <h4>Mousse au chocolat</h4>
                     <div class="last__line">
-                        <p>Déstructurée</p>
+                        <p>Au piment d'Espelette et à la truffe noire</p>
                         <span><strong>23€</strong></span>
                     </div>
                     <div class="cross">
@@ -157,7 +152,6 @@
         </div>
     </div>
     <div>
-
         <span class="btn__order">
             <button> Commander </button>
         </span>
